--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
     "require": {
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "illuminate/support": "^5.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.2",
+        "graham-campbell/testbench": "^5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "ServerlessPhp\\": "src/",
+            "App\\": "app/"
+        }
     }
 }
